# mpatlas

./: .gitignore  README  manage.py  package.json  pyproject.toml  requirements.txt  wsgi.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0001_squashed_0002_auto_20171106_2137.py  0002_auto_20171106_2137.py  0003_auto__del_field_userprofile_country_new__chg_field_userprofile_country.py
accounts/templates/accounts/: login.html  logout.html  password_reset_done.html  (+4 more)
bootstrap_layout/: admin.py  apps.py  cms_plugins.py  fields.py  models.py
bootstrap_layout/migrations/: 0001_initial.py  0002_auto_20170213_1446.py  0002_auto_20170323_1427.py  0003_section_container.py  0004_auto_20170321_1204.py  0005_auto_20170321_1219.py
campaign/: admin.py  forms.py  models.py  urls.py  views.py
campaign/migrations/: 0001_initial.py  0001_squashed_0003_auto_20171106_2137.py  0002_auto_20170213_1333.py  0002_auto_20180125_1340.py  0003_auto_20171106_2137.py  0003_auto_20180212_1241.py  0003_auto_20180213_0214.py  0003_auto_20180213_0309.py  0004_auto.py
category/: admin.py  models.py  urls.py  views.py
category/migrations/: 0001_initial.py  0001_squashed_0002_auto_20171106_2137.py  0002_auto_20171106_2137.py
mpa/: admin.py  filters.py  forms.py  import_wikipedia.py  load.py  models.py  mpa_assessment_geom_view.sql  mpa_polygon_category_view.sql  mpa_polygon_category_view_withrejects.sql  urls.py  views.py
mpa/data/: Wikipedia_Matches_20120214.csv  Wikipedia_Matches_20120214_v2.csv
mpa/migrations/: 0001_initial.py  0001_squashed_0006_auto_20171106_2135.py  0002_auto_20170213_1333.py  0003_auto_20170710_1306.py  0003_auto__add_field_mpa_verification_state__add_field_mpa_verifiied_by__ad.py  0004_auto_20170710_1312.py  0005_auto__add_field_contact_email__add_field_contact_phone__chg_field_cont.py  0005_mpa_glores_status.py  0006_auto_20171106_2135.py  0007_trigram_unaccent.py  0008_auto_20180213_0214.py  0008_auto__chg_field_candidateinfo_summary__chg_field_wikiarticle_summary__.py  0009_auto_20180918_1659.py  0009_auto__add_field_mpa_sovereign__chg_field_mpa_country.py  0010_auto_20180919_2346.py  0010_auto__chg_field_mpa_sovereign.py  0011_auto_20180920_1745.py  0011_auto__add_field_mpa_implemented__add_field_mpa_implementation_date__ad.py  0012_auto__add_field_mpa_is_mpa.py  0012_remove_mpa_marine_old.py  0013_mpa_orig_name.py  0014_auto_20180921_0847.py  0015_auto_20181030_1335.py  0016_auto_20200616_1101.py  0017_auto_20201202_1538.py  0018_auto_20201221_1715.py  0019_auto_20210816_1254.py
mpastats/: admin.py  apps.py  models.py
mpastats/migrations/: 0001_initial.py
mpastats/templatetags/: mpastats.py
mpatlas/: .local_settings.py.swp  16455-r17171-v4.patch  ST_WrapX.sql  default_settings.py  local_settings_EXAMPLE.py  settings.py  urls.py  views.py  wsgi.py
mpatlas/accounts/: admin.py  forms.py  models.py  urls.py  views.py
mpatlas/campaign/: admin.py  models.py  urls.py  views.py
mpatlas/deploy/: gunicorn.conf  gunicorn.conf.py  nginx_mpatlas.conf  run_gunicorn.sh  supervisor_mpatlas.conf
mpatlas/mpa/: admin.py  filters.py  forms.py  load.py  models.py  urls.py  views.py
mpatlas/scripts/: datearea.py  test_reversion.py
mpatlas/spatialdata/: admin.py  geo_utils.py  load.py  models.py  urls.py  views.py
mpatlas/static/: config.js  robots.txt
mpatlas/templates/: 404.html  500.html  base.html  base_old.html  cms_basic.html  cms_home.html  cms_mpapedia.html  home.html  home_map.html  map.html  news.html  v2_base.html  v2_cms_basic.html  v2_cms_home.html  v2_map.html  v2_news.html  v3_base.html  v3_cms_basic.html  v3_home.html  v3_home_old.html  v3_map.html  v3_news.html
mpatlas/usmpa/: models.py
mpatlas/utils/: cartodbmpa.py  cartompa.py  export_csv.py  geometry.py  mpa_geo_views.sql  usmpa_to_mpatlas.py
mpatlas/wdpa/: load.py  models.py  urls.py  views.py
mpatlas/world/: load.py  models.py
mpatlas/www/: media  static
notebooks/: CAN Migratory Bird Sanctuary classify.ipynb  Convert Aldryn_Style to DjangoCMS_Style.ipynb  Create _mpatlas _wdpa fields.ipynb  EU Natura SCI - Set to Unimplemented.ipynb  Fix 2019 Oct WDPA import.ipynb  Import AUS Reserve Zones.ipynb  Import Country MPA Coverages.ipynb  Inspect mpas.ipynb  Refresh all Carto features.ipynb  import_restoregeo_nonCEA_2019.ipynb  import_south_africa_mpatlas.ipynb  inspect_CEA_CHL_MEX_edits_2018.ipynb  inspect_wdpa_2018.ipynb  marine zero site cleanup.ipynb
postgres_search_extensions/: __init__.py  apps.py  lookups.py  search.py
postgres_search_extensions/migrations/: 0001_initial.py
spatialdata/: admin.py  analysis.py  geo_utils.py  load.py  models.py  urls.py  views.py
spatialdata/migrations/: 0001_initial.py  0001_squashed_0003_auto_20171106_2137.py  0002_auto_20180213_0214.py  0002_auto__add_eezmembership.py  0002_nation_mpa_agency.py  0003_auto_20171106_2137.py  0003_auto_20181218_1227.py  0003_auto__chg_field_eezmembership_area_in_eez.py  0008_auto__del_field_meow_lat_zone__add_field_meow_latitude_zone.py  0009_auto__del_eezsimplified__chg_field_meow_simple_geom_smerc__chg_field_m.py  0011_auto__chg_field_nation_summary__chg_field_meow_simple_geog__chg_field_.py  0012_auto__add_field_nation_geom_smerc__add_field_nation_geom__add_field_na.py  0013_auto__add_field_nation_marine_area__add_field_nation_mpa_area__add_fie.py  0014_auto__add_field_nation_notake_area__add_field_nation_notake_percent.py
staticmedia/: finders.py
usmpa/: admin.py  load.py  models.py
wdpa/: admin.py  load.py  merge.py  merge2014.py  mergechanges.py  mergechanges2014.py  models.py  urls.py  views.py
wdpa/migrations/: 0001_initial.py  0002_auto_20180919_1231.py  0003_auto__add_field_wdpapolygon_point_within__add_field_wdpapolygon_point_.py  0003_wdpa2019point_wdpa2019poly.py  0004_auto_20201218_1731.py  0004_auto__add_wdpa2014polygon__add_wdpa2014point.py  0005_remove_wdpasource_verifier.py  0006_auto_20201219_1421.py  0007_auto_20201221_1716.py  0008_auto_20201221_1717.py  0009_auto_20220719_2354.py
world/: admin.py  load.py  models.py
(+664 files in other folders)
