[tool.poetry]
name = "mpatlas"
version = "3.1.0"
description = "Django admin backend and data models for MPAtlas (admin.mpatlas.org)"
authors = ["Russell Moffitt <russ@russmoffitt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
wheel = "^0.43.0"
eventlet = "^0.36.1"
gevent = "^24.2.1"
greenlet = "^3.0.3"
gunicorn = "^22.0.0"
psycogreen = "^1.0.2"
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.30"
django-admin-tools = "^0.9.3"
django-appconf = "^1.0.6"
django-appmedia = "^1.0.1"
django-extensions = "^3.2.3"
django-safelogging = {git = "https://github.com/litchfield/django-safelogging.git", rev = "master"}
django-classy-tags = "^4.1.0"
django-countries = "^7.6.1"
django-durationfield = "^0.5.5"
unidecode = "^1.3.8"
python-slugify = "^8.0.4"
django-uuslug = "^2.0.0"
django-taggit = "^5.0.1"
django-cors-headers = "^4.3.1"
django-reversion = "^5.0.12"
django-select2 = "^8.1.2"
django-mptt = "^0.16.0"
django-polymorphic = "^3.1.0"
django-ckeditor = "^6.7.1"
django-tinymce = "^4.0.0"
django-cms = "<4.0"
djangocms-admin-style = "^3.3.1"
djangocms-attributes-field = "^3.0.0"
django-filer = {git = "https://github.com/django-cms/django-filer.git", allow-prereleases = true}
djangocms-history = {git = "https://github.com/divio/djangocms-history.git"}
aldryn-bootstrap3 = {git = "https://github.com/russmo/aldryn-bootstrap3.git"}
djangocms-layouttools = {git = "https://github.com/mci/djangocms-layout.git"}
aldryn-style = "^1.1.4"
djangocms-text-ckeditor = {git = "https://github.com/divio/djangocms-text-ckeditor.git"}
cmsplugin-plaintext-djangocms3 = {git = "https://github.com/russmo/cmsplugin-plaintext.git"}
djangocms-file = "^3.0.1"
djangocms-googlemap = "^2.2.0"
djangocms-link = "^3.1.1"
djangocms-picture = "^4.1.1"
djangocms-audio = "^2.1.1"
djangocms-video = "^3.1.0"
djangocms-snippet = "^3.1.1"
djangocms-style = "^3.1.0"
pillow = "^10.3.0"
easy-thumbnails = "^2.8.5"
sorl-thumbnail = "^12.10.0"
django-haystack = "^3.2.1"
carto = {git = "https://github.com/CartoDB/cartodb-python.git"}
boto = "^2.49.0"
python-geoip = "^1.2"
python-geoip-geolite2 = "^2015.303"
pygeoip = "^0.3.2"
geoip2 = "^4.8.0"
fabric = "^3.2.2"
argparse = "^1.4.0"
beautifulsoup4 = "^4.12.3"
cryptography = "^42.0.7"
docutils = "^0.21.2"
feedparser = "^6.0.11"
httplib2 = "^0.22.0"
ipython = "^8.24.0"
jupyter = "^1.0.0"
markdown = "^3.6"
ndg-httpsclient = "^0.5.1"
oauth2 = "^1.9.0.post1"
path-py = "^12.5.0"
pycryptodome = "^3.20.0"
pyenchant = "^3.2.2"
pygments = "^2.18.0"
python-memcached = "^1.62"
setproctitle = "^1.3.3"
simplejson = "^3.19.2"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
webencodings = "^0.5.1"
jupyterlab = "^4.2.1"
#pyzmq = "^26.0"
#cffi = "^1.16"
#pyyaml = "^6.0.1"
#lxml = "^5.2.2"
#frozenlist = "^1.4.1"
#numpy = "^1.26"
#aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
Werkzeug = "^3.0.3"
whitenoise = "^6.6.0"
django-debug-toolbar = "^4.4.2"
pytest = "^8.2.1"


[tool.poetry.group.geo.dependencies]
fiona = "^1.9.6"
shapely = "^2.0.4"
django-shapes = "^0.2.0"
geographiclib = "^2.0"
django-shape-engine = {git = "https://github.com/sigma-geosistemas/django-shape-engine.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
